*Empty MediaWiki Message*

--- a/Jakapäiv.mw
+++ b/Jakapäiv.mw
@@ -1,57 +1,57 @@
 [[Pilt:095.Elijah Ascends to Heaven in a Chariot of Fire.jpg|pisi|Eelijä-prohvõdi tulinõ taivahesõit]]
-'''Jakapäiv''' vai '''iljapäiv''' om vana kalendri [[2. rehekuu päiv|2. rehekuu (mädäkuu, lõikuskuu) pääväl]] (vahtsõ kalendri perrä [[20. hainakuu päiv|20. hainakuu pääväl]]), kolq täüt nädälit päält [[piitrepäiv]]ä ja viis üüdpäivä inne [[annõpäiv]]ä.<br />
+'''Jakapäiv''' vai '''iljapäiv''' om vana kalendri [[2. põimukuu päiv|2. põimukuu (mädäkuu, lõikuskuu) pääväl]] ([[vahtsõnõ kallendri|vahtsõ kalendri]] perrä [[20. hainakuu päiv|20. hainakuu pääväl]]), kolq täüt nädälit päält [[piitrepäiv]]ä ja viis üüdpäivä inne [[annõpäiv]]ä.<br />
 Taa om pühä prohvõt' Eelijä ([[slaavi|sl]] k ''Илия'', [[kreeka kiil|kr k]] ''Ἠλίας'') mälehtüspäiv. Peetäs pääas'aligult [[Setomaa]]l ja om aost aigu suur praasnik olnuq, mink juurõq küünüseq inneristiaolidsi kombidõ mano.<br />
-Es'kiq selgebält ku [[setoq|setodõl]], ommaq hoitunuq muistidsõ vakusõpraasnigu ja ohvõrdustal'tusõ kombõq [[vad'alasõq|vad'alaisil]].<ref>Vrd. Haavio, Heilige Haine, lk. 93 ja 127-136; Ariste, Vadja rahvakalender, lk. 99-109.</ref>
+Es'kiq selgebält ku [[setoq|setodõl]], ommaq alalõ hoitunuq muistidsõ vakusõpraasnigu ja ohvõrdustal'tusõ kombõq [[vad'alasõq|vad'alaisil]].<ref>Vrd. Haavio, Heilige Haine, lk. 93 ja 127-136; Ariste, Vadja rahvakalender, lk. 99-109.</ref>
 == Koh peetäs ==
 Küläpraasnikit ja tsässonapühhi peetäs vai om peet [[Luhamaa]]l, [[Ungavitsa]]h, [[Krohova]]h, [[Lõtina]]h, [[Koss'olka]]h, [[Vohina]]h, [[Bolkova]]h, [[Molniga]]h, [[Pitalova]]h, [[Konetski]]h, [[Krasnagoora]]h, [[Luki Kupeelitsa]]h, [[Metkavitsa]]h, [[Parkanuva]]h, [[Podgramjeh]], [[Ragosina]]h, [[Rääsolaanõ]]h, [[Sokoluva|Sokolovah]], [[Suurõ-Vidovitsa]]h, [[Väiko-Vidovitsa]]h, [[Teastõ|Tias'sil]], [[Lebedi]]h, [[Truba]]l ja [[Tavidakondsa]]h.
 == Kuis peetäs ==
-Jakapäävä tüüd tetä-äs, käüti ker'koh ni matusõaiah edevanõbidõ haudu pääl. Õdakuspoolõh kul'atõdi. Tuu oll' viimäne suurõp suvinõ pühi, ku sai viil ilosit kergit suvõrõivit kandaq. Põimukuu algusõhe trehvsiqkiq sagõhõhe kõkõ lämbebäq ilmaq ja pall'o pikseht. Om sääne ütelüs, õt Ilja om pikse peremiis. Jakapääväst nakasõq ilmaq sügüsetsebäst minemä ja tulõ vil'äkor'stus. Üüq lääväq jahhehebäst ja pümmehebäst.<br />
-'''Ungavitsah''' om jakapäivä nelli päivä peet. Inne peeti õnnõ kolq päivä. Päält tuud, ku kuagiq külämiis oll' lännüq perämätse pühi nurmõ tüühü, tap' pikseh tä arq. Tuust aost naati neländät päivä ka pidämä.
-Jakapäävä om Ungavisah õks kirmas olnuq. Sis tull'eq sinnäq kokko umatsõq ja hõimolisõq. Praasnikut peeti Ungavitsa mäe pääl. Tuu om korgõ illos kotus õkva Ut'sa järve otsah - olõ-õi kavvõh Petseri-Pihkva suurtiist, veid'okõsõ maad Ungavitsa käänätüsest külä poolõ.<br />
-Minevä aastagasaa 90-ndide algusõh, ku setodõ hindätiidmine nõsõma naas', sai kirmasõst ummamuudu Ungavitsa külä  ja perridõ kokkotulõk. Tuulaigo setodõl viil umma lippu olõ-õs, pito peeti Eesti sini-must-valgõ all. Rahvast kogohu pall'o, tutvit ni sugulaisi tull' ka Eestimaa kavvõbist kotusist.<br />
-Umbõs kümme aastakka oll'eq säändseq Ungavitsa külä kokkotulõgiq. Ku Eesti-Vinne piirikontroll kimmäbäst läts', kahani ka kirmas. Noq om külägi piaaigu arq häädünüq.<br />
-'''Lebedi küläh''' om kirmas jakapäävä edimädsel pühäl, '''Trubal''' tõõsõl pühäl, '''Tavidakondsah''' kolmmandal pühäl.<ref>"Eliapäev (20. VII)", raamaduh "Eesti rahvakalender" IV, "Eesti Raamat", 1985, kokko säädnü Hiiemäe Mall</ref> 
+Jakapäävä tüüd tetä-äs, käüti ker'koh ni matusõaiah edevanõbidõ haudu pääl. Õdakuspoolõh kul'atõdi. Tuu oll' viimäne suurõp suvinõ pühi, ku sai viil ilosit kergit suvõrõivit kandaq. [[Põimukuu]] algusõhe trehvsiqkiq sagõhõhe kõkõ lämbebäq ilmaq ja pall'o [[pikne|pikseht]]. Om sääne ütelüs, õt Ilja om pikse peremiis. Jakapääväst nakasõq ilmaq sügüsetsebäst minemä ja tulõ vil'äkor'stus. Üüq lääväq jahhehebäst ja pümmehebäst.<br />
+'''Ungavitsah''' om jakapäivä nelli [[päiv (aomõõt)|päivä]] peet. Inne peeti õnnõ kolq päivä. Päält tuud, ku kuagiq külämiis oll' lännüq perämätse pühi nurmõ tüühü, tap' pikseh tä arq. Tuust aost naati neländät päivä ka pidämä.
+Jakapäävä om Ungavisah õks kirmas olnuq. Sis tull'eq sinnäq kokko umatsõq ja hõimolisõq. Praasnikut peeti Ungavitsa mäe pääl. Tuu om korgõ illos kotus õkva [[Ut'sa järv]]e otsah - olõ-õi kavvõh [[Petseri]]-[[Pihkva]] suurtiist, veid'okõsõ maad Ungavitsa käänätüsest [[külä]] poolõ.<br />
+Minevä [[aastagasada|aastagasaa]] 90-ndide algusõh, ku setodõ [[hindätiidmine]] nõsõma naas', sai kirmasõst ummamuudu Ungavitsa külä  ja [[pereq|perridõ]] kokkotulõk. Tuulaigo setodõl viil umma lippu olõ-õs, pito peeti [[Eesti]] sini-must-valgõ all. Rahvast kogohu pall'o, tutvit ni sugulaisi tull' ka Eestimaa kavvõbist kotusist.<br />
+Umbõs kümme [[aastak]]ka oll'eq säändseq Ungavitsa külä kokkotulõgiq. Ku Eesti-Vinne piirikontroll kimmäbäst läts', kahani ka kirmas. Noq om külägi piaaigu arq häädünüq.<br />
+'''Lebedi küläh''' om kirmas jakapäävä edimädsel pühäl, '''Trubal''' tõõsõl pühäl, '''Tavidakondsah''' kolmmandal pühäl.<ref>"Eliapäev (20. VII)", raamaduh "Eesti rahvakalender" IV, "Eesti Raamat", [[1985]], kokko säädnü Hiiemäe Mall</ref> 
 == Uskmisõq ==
-* Ku jakapäivä pühitse-ei, sis pikseh lüü palama, tap tüütegija, räüss rik rüä.
-* Jakapääväst pääle nakas suvõlõõnõh taganõma ja vesi järveh jahtuma.
+* Ku jakapäivä pühitse-ei, sis pikseh lüü palama, tap tüütegija, räüss rik [[rügä|rüä]].
+* Jakapääväst pääle nakas suvõlõõnõh taganõma ja vesi [[järv]]eh jahtuma.
 * Jakapäävä tohi-iq kapstaaiah kävvüq, selle õt tuu mut'utas kapstapäie luumist.
-* Tuul aigo, ku inemiseq oll'eq kerigu man, käve jakab kapstih ja käänd' kapstapäid. (Rõugõ kihlkund)
+* Tuul aigo, ku [[inemine|inemiseq]] oll'eq kerigu man, käve jakab kapstih ja käänd' kapstapäid. ([[Rõugõ kihlkund]])
 * Jakapääväst pääle kaosõq parmuq võso veerest.
-* Marju kor'ati talvõst inne jakapäivä.
+* Marju kor'ati [[talv]]õst inne jakapäivä.
 * Inne iljapäiävä satas salvõ, päält iljat salvõst vällä. (Setomaa)
-* Jakapäävä tuvva-ai hainu kodo. Palasõq arq. Pikseh lüü sisse. (Setomaa)
+* Jakapäävä tuvva-ai [[hain]]u kodo. Palasõq arq. Pikseh lüü sisse. (Setomaa)
 * Jakapääväst lüvväs haina sisse raudnagõl. Sis haina inäp tetä-äs.
 * ''Jüri läütäs, Jakop kistutas. Jakop oll üüvalge kistutaja.'' (Rõugõ kihlkund)
 * ''Jakapäiväs pidi olema rükis kokku pantud.'' (Rõugõ kihlkund)
 * ''Piät tegema haina inne jakapäivä, päält jakapäivä tulõ vihmäne aig.'' (Rõugõ kihlkund)
 == Jakapääväst Vislapuu Ode perrä ==
 Vislapuu Ode Setomaalt om kõnõlnuq niimuudu.<br />
-''Jakapääväst käänüs suvi joq sügüsehe.<br />
-''Miis läts naasega jakapäävä ker’kohe. Vana teeda puttu vasta. Ütel’: “Mille tiq nii läät, ku hobõsõ hand olõi sõlmõh? Vet noq om viil kevväi.” Tulli nuuq ker’kust tagasi niq ütliq: “Pangõq noq miq kaq hobõsõl hand sõlmõ!” Puttu jalq tuusama vasta. Ütel’: “Mille teil hobõsõl hand om sõlmõh? Vet noq om joq süküs.”''.<ref>Kirsi Ello üles kirotõduq seto inemiisi jutusõq [http://www.folklore.ee/setukirss/?andmebaas=list]</ref>
-== Prohvõt' Eelijä kotsilõ Piiblih ==
-Prohvõt' Eelijä oll' perit Gileadimaa Thesbe liinast Jordani jõõst hummogu puul. Tä elli kasinat ja lihtsät ello. Miildü kandaq lambanahast mäntlit ja tõmmas' tuu hõlmaq kokko prosta nahkpailaga. Timä nimi Elijahu tähendäs heebreä keeleh "Issänd om mu Jummal'." Eelijä oll' uma eloviisi poolõst pallav' ja loovka jutuga oppaja ni periandmadu kõnõlõja. Säändse pirandi muudu olõgi peräst naati timmä kaq judaistligu Rooma-vastalidsõ pardisanipargi liikmõst pidämä, a tuu ummakõrda tõi vabamehe kuulsusõ ni säädüserikja tuntusõ kuningas Ahabi ja timä naasõ Jazebeli sil'mih.
+''Jakapääväst käänüs [[suvi]] joq [[süküs|sügüsehe]].<br />
+''[[Miis]] läts [[naanõ|naasega]] jakapäävä ker’kohe. Vana teeda puttu vasta. Ütel’: “Mille tiq nii läät, ku [[hopõn|hobõsõ]] hand olõi sõlmõh? Vet noq om viil [[kevväi]].” Tulli nuuq ker’kust tagasi niq ütliq: “Pangõq noq miq kaq hobõsõl hand sõlmõ!” Puttu jalq tuusama vasta. Ütel’: “Mille teil hobõsõl hand om sõlmõh? Vet noq om joq süküs.”''.<ref>Kirsi Ello üles kirotõduq seto inemiisi jutuq [http://www.folklore.ee/setukirss/?andmebaas=list]</ref>
+== Prohvõt' Eelijä kotsilõ [[Piibli]]h ==
+Prohvõt' Eelijä oll' perit Gileadimaa Thesbe liinast Jordani [[jõgi|jõõst]] hummogu puul. Tä elli kasinat ja lihtsät ello. Miildü kandaq lambanahast mäntlit ja tõmmas' tuu hõlmaq kokko prosta nahkpailaga. Timä nimi Elijahu tähendäs [[heebreä kiil|heebreä keeleh]] "Issänd om mu Jummal'." Eelijä oll' uma eloviisi poolõst pallav' ja loovka jutuga oppaja ni periandmadu kõnõlõja. Säändse pirandi muudu olõgi peräst naati timmä kaq judaistligu Rooma-vastalidsõ pardisanipargi liikmõst pidämä, a tuu ummakõrda tõi vabamehe kuulsusõ ni säädüserikja tuntusõ kuningas Ahabi ja timä naasõ Jazebeli sil'mih.
 === Mõnõq Eelijä imeteoq: ===
-* Prohvõt' Eelijä pand' ummi palvidõgaq taiva kinni ja vihma sata-as tuustsaad'k kolq ja puul aastakka.<br />
-:'''''Prohvõt't Eelijä kuulutas ette põvvaaigo.'''''
-:''<sup>1</sup>Thesbelanõ Eelijä, Gileadi Thesbest, ütel' Ahabilõ: "Ni tõtõtõstõ ku eläs Issänd, Iisraeli Jummal', kink iih maq saisa: njoil aastagil olõ-õi kastõt õgaq vihma muido ku muq sõnno pääle!"''
-* Ku prohvõt' Eelijä kõrbõh käküssih oll', sis tõieq tsirguq tälle leibä süvväq.
-* Prohvõt' Eelijä tekk' väikost kogosõst hulga jauhõ ja õlli, tenost läsele, kiäq oll' tälle päävarjo andnuq.
+* Prohvõt' Eelijä pand' ummi palvidõgaq taiva kinni ja [[vihm]]a sata-as tuustsaad'k kolq ja puul aastakka.<br />
+:'''''Prohvõt't Eelijä kuulutas ette põvvaaigõ.'''''
+:''<sup>1</sup>Thesbelanõ Eelijä, Gileadi Thesbest, ütel' Ahabilõ: "Ni tõtõtõstõ ku eläs Issänd, [[Iisraeli]] Jummal', kink iih maq saisa: njoil aastagil olõ-õi kastõt õgaq vihma muido ku muq sõnno pääle!"''
+* Ku prohvõt' Eelijä [[kõrbõ]]h käküssih oll', sis tõieq [[tsirk|tsirguq]] tälle [[leib]]ä süvväq.
+* Prohvõt' Eelijä tekk' väikost kogosõst hulga jauhõ ja [[õli|õlli]], tenost läsele, kiäq oll' tälle päävarjo andnuq.
 * Prohvõt' Eelijä kuts' Karmeli mäe pääl taivast tulõkeeleq, miäq palodiq timä ohvri inemiisi silmi all arq, a võlss'jumalatiinjidõ ohvri jätiq vasta võtmaldaq.
 * Prohvõt' Eelijä hukas' 450 võlss'prohvõtit, kiäq kummardiq puusliid ja essüdiq inemiisi.
-* Prohvõt' Eelijä võt' süüki vasta ingli hindä käest ni astõ peräh tuud 40 üüpäivä järgepiteh.
-* Ja peräkõrra, 895. aastagal inne Kristust, tuusama rehk', ku tä uma jungri Eliisaga jutõl', haarõti Eelijä palama läügähtünüq vankrihe ja viidi taivahe.
+* Prohvõt' Eelijä võt' [[süük]]i vasta ingli hindä käest ni astõ peräh tuud 40 üüpäivä järgepiteh.
+* Ja peräkõrra, [[9. aastagasada i.m.a.|895. aastagal inne Kristust]], tuusama rehk', ku tä uma jungri Eliisaga jutõl', haarõti Eelijä palama läügähtünüq [[vankri]]he ja viidi taivahe.
 == Jakapäiv kerigukalendrih ==
-Tuul pääväl, ku piiblisõnno perrä Pühä Eelijä tulitsidõ rattidõgaq taivahe sõit', pühitsedäskiq prohvõt' Eelijä pühhä (vana kalendri 2. rehekuu päiv). Tüüd olõ-õs lubat tetäq, muido või Pähä Eelijä pahatsõst saiaq.<br />
-Prohvõt' Eelijät pallõldas põvva aigo, õt tulõsiq vihma. A ku vihma oll' veigaq kavva ja pll'o sadanuq, sis pallõldi Eelijät, õt vihm järgi jääsiq.<br />
+Tuul pääväl, ku piiblisõnno perrä Pühä Eelijä [[tuli]]tsidõ [[ratas|rattidõgaq]] taivahe sõit', pühitsedäskiq prohvõt' Eelijä pühhä (vana kalendri 2. põimukuu päiv). Tüüd olõ-õs lubat tetäq, muido või Pühä Eelijä pahatsõst saiaq.<br />
+Prohvõt' Eelijät pallõldas [[põud|põvva]] aigo, õt tulõsiq vihma. A ku vihma oll' veigaq kavva ja pll'o sadanuq, sis pallõldi Eelijät, õt vihm järgi jääsiq.<br />
 Pühä Eelijä käest om pallõld kaidsõt kaq pikse iist.<br />
-Vanast oll' Vahtsõliina lähkoh Miikse külä man puu, kohe pikseh sisse lei. Taa puu oll' rahva siäh au seeh. Timäst müüdä minneh kummardõdi ja pallõldi:
+Vanast oll' [[Vahtsõliina]] lähkoh [[Miikse]] külä man [[puu]], kohe pikseh sisse lei. Taa puu oll' rahva siäh au seeh. Timäst müüdä minneh kummardõdi ja pallõldi:
 :''"Pühä Pikne!
 :''Hoiaq es' Jumala viha iist ja vitsa iist!''
 :''Hoiaq kõõ kur'a iist, tüü iist ja teo iist!''
 :''Suur Jummal', saadaq meid heldüsega edesi!"''
-Seto kombih ommaq segähünüq Vana Testamendi prohvõdi Eelijä ja Vahtsõ Testamendi apostli Jaakobusõ mälehtüspäiv vai jakapäiv. Tuu om nii selle, õt naidõ pühhi aolinõ vaheq om veigaq väikene. Iljapäivä peeti innep Petserimaa hummogunulgõh, a jakapäivä õdagunulgõh.
+Seto kombih ommaq segähünüq [[Vana Testament|Vana Testamendi]] prohvõdi Eelijä ja [[Vahtsõnõ Testament|Vahtsõ Testamendi]] apostli Jaakobusõ mälehtüspäiv vai jakapäiv. Tuu om nii selle, õt naidõ pühhi aolinõ vaheq om veigaq väikene. Iljapäivä peeti innep [[Petserimaa]] hummogunulgõh, a jakapäivä õdagunulgõh.
 == Prohvõt' Eelijä perrä pantuq nimeq ==
-Vana Testamendi kõkõ kuulsaba prohvõdi Eelijä perrä om Lõunõ-Eestih latsilõ nimest pant vinne nimest Ilja perit Hillo, Illis, Iljo ja Illo.
+Vana Testamendi kõkõ kuulsaba prohvõdi Eelijä perrä om Lõunõ-Eestih [[lats]]ilõ nimest pant vinne nimest Ilja perit Hillo, Illis, Iljo ja Illo.
 == Jakapäävä söögiq ==
 === Kapstaleib ===
 Taa om suur kapstapiirak.<br />
@@ -59,19 +59,20 @@ Pandaq hapund kapstast rüäleevä kohetusõ sisse, vägevä liha tükke pääle
 Kapstaleibä pidi 4 tunni ahoh hoitma.<br />
 Piirak tull' paksu koorõga ja suurõ leevä suurtunõ.
 === Seenekotletiq ===
-300 g soolasiini, 200 g ts'algotõt tsialihha, ½ takanat kesväjauhõ, 3 sibulat, 2 munna, tsitroni- ja valgõt pipõrd, riivit saia.<br />
-Seeneq leotaq ja ts'algotaq. Ts'algotaq sipul' ja hautaq võiu seeh kuldpruun'st. Siädäq kõik kõrdapiteh läbi. Laskaq segol tunn'kõnõ saistaq. Höörütäq kotletid, püperdäq riivit saia seeh. Kütsäq.
+300 g soolasiini, 200 g ts'algotõt tsialihha, ½ takanat kesväjauhõ, 3 sibulat, 2 [[muna|munna]], tsitroni- ja [[valgõ]]t pipõrd, riivit [[sai]]a.<br />
+[[siin|Seeneq]] leotaq ja ts'algotaq. Ts'algotaq sipul' ja hautaq võiu seeh kullakarva [[pruun|pruun'st]]. Siädäq kõik kõrdapiteh läbi. Laskaq segol tunn'kõnõ saistaq. Höörütäq kotletid, püperdäq riivit saia seeh. Kütsäq.
 == Trüküssist ==
-* "Püha prohvet Eelija mälestuspäev ehk ''iljapäiv''", raamaduh "Setomaa tsässonad", Greif, 2011, kokko säädnü Raudoja Ahto ja Mekäläineni Tapio
-* "Jaagupipäev", raamaduh "Rahvakelendri pühi", Kirjastus Ilo, 2005, Lääne (Lään) Christina
-* Seenekotlete tegemisoppus aolehest "Valgamaalane" 23.01.2007
+* "Püha prohvet Eelija mälestuspäev ehk ''iljapäiv''", [[raamat|raamaduh]] "Setomaa tsässonad", Greif, [[2011]], kokko säädnü [[Raudoja Ahto]] ja Mekäläineni Tapio
+* "Jaagupipäev", raamaduh "Rahvakelendri pühi", Kirjastus Ilo, [[2005]], Lääne (Lään) Christina
+* Seenekotlete tegemisoppus [[aoleht|aolehest]] "Valgamaalane" 23.01.[[2007]]
 * Piibli
 == Võrgost ==
-* [http://www.folklore.ee Uskmiisi ja jutussidõ teedüskogoq]
-* [http://et.wikipedia.org/wiki/Elias Eeliäs inglüskiilseh vikipeediäh]
+* [http://www.folklore.ee Uskmiisi ja rahvajuttõ teedüskogoq]
+* [http://en.wikipedia.org/wiki/Elias Eeliäs inglüskiilseh vikipeediäh]
 * [http://setoturism.ee/?lang=est&m1=33&m2=38&obj=14 Jakapääväst "Setomaa turismi" kodolehe pääl]
 * [http://www.polvamaa.ee/public/files/setu_rahvakalender_ja_kulinaariaparand.pdf Seto rahvakalendri ja rahvussöögiq]
 * [http://www.evm.ee/id/239/ "Eesti Vabaõhumuusõumi" rahvakalendri]
 * [http://ru.wikipedia.org/wiki/%D0%98%D0%BB%D1%8C%D0%B8%D0%BD_%D0%B4%D0%B5%D0%BD%D1%8C Jakapäävä kotsilõ vinnekiilseh vikipeediäh]
+* [http://et.wikipedia.org/wiki/Elias Prohvõt' Eeliäst tulõvaq nimeq eestikiilseh vikipeediäh]
 == Lätteq ==
 <references>
