--- a/Katripäiv.mw
+++ b/Katripäiv.mw
@@ -39,8 +39,8 @@ Häste tunnõtu katrirituaal nägi vällä sääne: inne katripäivä vai katrip
 ** Katripäävä es tohiq kanasuppi kiitäq, sõs kanaq sööväq kapstaq ärq.
 
 ===Muijal Eestin===
-** Väikü-Maarjan viidi tangupudõr kausiga lauta ja panti kausi ala kat`s langakerrä: üt`s must, tõnõ valgõ.
-** Mõnõl puul seiväq pernaanõ ja tütrik lambidõ sigivüse õnnõs lambalaudan keedetüisi munnõ.
+* Väikü-Maarjan viidi tangupudõr kausiga lauta ja panti kausi ala kat`s langakerrä: üt`s must, tõnõ valgõ.
+* Mõnõl puul seiväq pernaanõ ja tütrik lambidõ sigivüse õnnõs lambalaudan keedetüisi munnõ.
 
 ===Muijal maailman===
 Pühä Katariina oll` katoliiklusõn  üts` nelätõistkümnest  hädän avitajast, minkperäst ülistiväq tedä nii preestriq ku poeediq.
@@ -50,11 +50,11 @@ Prantsusmaal nõsõsi pühä Katariina pühäklikkus 15. sajandil esieränis avv
 Tuust kombõst tull` kõnnõkiilde ütlemine „Katariinalõ mütsü päähä pandma“ (''coiffer sainte Catherine''), tähendüsega „vallalinõ ollaq ka viil 25-aastadsõlt“. Naisi, kiä keskaol säänestmuudu pühhist ossa saivaq, kutsuti Prantsusmaal Catherinette-ides. Peränpoolõ mütsü päähä pandmisõ kommõq kattõ, a viil täämpädsel päävälgi kandvaq üle 25-aastadsõq naasõq, kiä lääväq katriballilõ, esimuudu hindätettüt mütsü, miä näütäs näide vallalidsust ja köüdüst pühä Katariina mütsü päähäpandmisõga.
 
 ===Kaeq kah===
-** Eesti rahvakallendri
-** Katariina
-** Märdipäiv
-** Pühä Katariina
+* Eesti rahvakallendri
+* Katariina
+* Märdipäiv
+* Pühä Katariina
 
 ===Vällänlingiq===
-** Katripääväst  Eesti rahvakallendri tähtpäivi andmõbaasin Berta
-** Eesti Rahva Muuseum
+* Katripääväst  Eesti rahvakallendri tähtpäivi andmõbaasin Berta
+* Eesti Rahva Muuseum
