--- a/Katripäiv.mw
+++ b/Katripäiv.mw
@@ -48,10 +48,10 @@ Prantsusmaal nõsõsi pühä Katariina pühäklikkus 15. sajandil esieränis avv
 Tuust kombõst tull` kõnnõkiilde ütlemine „Katariinalõ mütsü päähä pandma“ (''coiffer sainte Catherine''), tähendüsega „vallalinõ ollaq ka viil 25-aastadsõlt“. Naisi, kiä keskaol säänestmuudu pühhist ossa saivaq, kutsuti Prantsusmaal Catherinette-ides. Peränpoolõ mütsü päähä pandmisõ kommõq kattõ, a viil täämpädsel päävälgi kandvaq üle 25-aastadsõq naasõq, kiä lääväq katriballilõ, esimuudu hindätettüt mütsü, miä näütäs näide vallalidsust ja köüdüst pühä Katariina mütsü päähäpandmisõga.
 
 ===Kaeq kah===
-* Eesti rahvakallendri
-* Katariina
-* Märdipäiv
-* Pühä Katariina
+* [[Eesti rahvakallendri]]
+* [[Katariina]]
+* [[Märdipäiv]]
+* [[Pühä Katariina]]
 
 ===Vällänlingiq===
 * Katripääväst  Eesti rahvakallendri tähtpäivi andmõbaasin Berta
