--- a/Katripäiv.mw
+++ b/Katripäiv.mw
@@ -54,5 +54,5 @@ Tuust kombõst tull` kõnnõkiilde ütlemine „Katariinalõ mütsü päähä pa
 * [[Pühä Katariina]]
 
 ===Vällänlingiq===
-* Katripääväst  Eesti rahvakallendri tähtpäivi andmõbaasin Berta
+* Katripääväst  Eesti rahvakallendri tähtpäivi andmõbaasin [http://et.wikipedia.org/wiki/Berta_%28andmebaas%29 Berta]
 * Eesti Rahva Muuseum
