--- a/Katripäiv.mw
+++ b/Katripäiv.mw
@@ -55,4 +55,4 @@ Tuust kombõst tull` kõnnõkiilde ütlemine „Katariinalõ mütsü päähä pa
 
 ===Vällänlingiq===
 * [http://www.folklore.ee/Berta/tahtpaev-kadripaev.php Katripääväst]  Eesti rahvakallendri tähtpäivi andmõbaasin [http://et.wikipedia.org/wiki/Berta_%28andmebaas%29 Berta]
-* [www.erm.ee Eesti Rahva Muuseum]
+* [http://www.erm.ee Eesti Rahva Muuseum]
