*Empty MediaWiki Message*

--- a/Jakapäiv.mw
+++ b/Jakapäiv.mw
@@ -1,5 +1,5 @@
 [[Pilt:095.Elijah Ascends to Heaven in a Chariot of Fire.jpg|pisi|Eelijä-prohvõdi tulinõ taivahesõit]]
-'''Jakapäiv''' vai '''iljapäiv''' om vana kalendri [[2. põimukuu päiv|2. põimukuu (mädäkuu, lõikuskuu) pääväl]] ([[vahtsõnõ kallendri|vahtsõ kalendri]] perrä [[20. hainakuu päiv|20. hainakuu pääväl]]), kolq täüt nädälit päält [[piitrepäiv]]ä ja viis üüdpäivä inne [[annõpäiv]]ä.<br />
+'''Jakapäiv''' vai '''iljapäiv''' om vana kalendri [[2. põimukuu päiv|2. põimukuu (mädäkuu, lõikuskuu) pääväl]] ([[vahtsõnõ kallendri|vahtsõ kalendri]] perrä [[20. hainakuu päiv|20. hainakuu pääväl]]), kolq täüt [[nätäl|nädälit]] päält [[piitrepäiv]]ä ja viis üüdpäivä inne [[annõpäiv]]ä.<br />
 Taa om pühä prohvõt' Eelijä ([[slaavi|sl]] k ''Илия'', [[kreeka kiil|kr k]] ''Ἠλίας'') mälehtüspäiv. Peetäs pääas'aligult [[Setomaa]]l ja om aost aigu suur praasnik olnuq, mink juurõq küünüseq inneristiaolidsi kombidõ mano.<br />
 Es'kiq selgebält ku [[setoq|setodõl]], ommaq alalõ hoitunuq muistidsõ vakusõpraasnigu ja ohvõrdustal'tusõ kombõq [[vad'alasõq|vad'alaisil]].<ref>Vrd. Haavio, Heilige Haine, lk. 93 ja 127-136; Ariste, Vadja rahvakalender, lk. 99-109.</ref>
 == Koh peetäs ==
@@ -60,11 +60,11 @@ Kapstaleibä pidi 4 tunni ahoh hoitma.<br />
 Piirak tull' paksu koorõga ja suurõ leevä suurtunõ.
 === Seenekotletiq ===
 300 g soolasiini, 200 g ts'algotõt tsialihha, ½ takanat kesväjauhõ, 3 sibulat, 2 [[muna|munna]], tsitroni- ja [[valgõ]]t pipõrd, riivit [[sai]]a.<br />
-[[siin|Seeneq]] leotaq ja ts'algotaq. Ts'algotaq sipul' ja hautaq võiu seeh kullakarva [[pruun|pruun'st]]. Siädäq kõik kõrdapiteh läbi. Laskaq segol tunn'kõnõ saistaq. Höörütäq kotletid, püperdäq riivit saia seeh. Kütsäq.
+[[siin|Seeneq]] leotaq ja ts'algotaq. Ts'algotaq sipul' ja hautaq võiu seeh kullakarva [[pruun|pruun'st]]. Siädäq kõik kõrdapiteh läbi. Laskaq segol [[tunn|tunn'kõnõ]] saistaq. Höörütäq kotletid, püperdäq riivit saia seeh. Kütsäq.
 == Trüküssist ==
 * "Püha prohvet Eelija mälestuspäev ehk ''iljapäiv''", [[raamat|raamaduh]] "Setomaa tsässonad", Greif, [[2011]], kokko säädnü [[Raudoja Ahto]] ja Mekäläineni Tapio
 * "Jaagupipäev", raamaduh "Rahvakelendri pühi", Kirjastus Ilo, [[2005]], Lääne (Lään) Christina
-* Seenekotlete tegemisoppus [[aoleht|aolehest]] "Valgamaalane" 23.01.[[2007]]
+* Seenekotlete tegemisoppus [[aoleht|aolehest]] "Valgamaalane" [[23. vahtsõaastakuu päiv|23.01.]][[2007]]
 * Piibli
 == Võrgost ==
 * [http://www.folklore.ee Uskmiisi ja rahvajuttõ teedüskogoq]
@@ -76,3 +76,4 @@ Piirak tull' paksu koorõga ja suurõ leevä suurtunõ.
 * [http://et.wikipedia.org/wiki/Elias Prohvõt' Eeliäst tulõvaq nimeq eestikiilseh vikipeediäh]
 == Lätteq ==
 <references>
+[[katõgooria:Kallendri]]
