--- a/Mõlapäiv.mw
+++ b/Mõlapäiv.mw
@@ -1,13 +1,14 @@
-Mõlapäävä nimitüst tarvitõdas Mõla kandi paigapäälidse pühä kottalõ, midä peetäs edimätsel pühäpääväl peräh piitrepäivä (piitrepäiv om vana kalendri 12. hainakuu pääväl).<br />
+'''Mõlapäävä''' nimitüst tarvitõdas Mõla kandi paigapäälidse pühä kottalõ. Mõlapäiv om liikja pühä, midä peetäs edimätsel pühäpääväl peräh piitrepäivä (seto rahvakelendri piitrepäiv om vana kalendri 12. hainakuu pääväl).<br />
 Mõlapäävä om Mõla küläh ülepetserimaalinõ praasnik - Mõla kerigu nimepäiv.
 == Koh peetäs ==
 Mõlapäivä peetäs Mõla ker'koh.<br />
 Mõla om külä Irboska nulgah Setomaal. Taa külä om Mõla oroh, 24 km Petserist lõunahummogu poolõ ja 4 km Irboskast põh'aõdagu poolõ. Mõla küläst hummogupoolõ om Mõla järv, minkast juusk vällä Optjoki jõgi.<br />
-Küläh oll' 2000. aastagal elänikke 34  ja 2011. aasatgal 40.<ref>Vinnekiilne vikipeediä Mõla kotsilõ [http://ru.wikipedia.org/wiki/%D0%9C%D0%B0%D0%BB%D1%8B]</ref>
+Küläh oll' 2000. aastagal elänikke 34  ja 2011. aasatgal 40.<ref>Vinnekiilne vikipeediä Mõla kotsilõ [http://ru.wikipedia.org/wiki/%D0%9C%D0%B0%D0%BB%D1%8B]</ref><br />
+Mõlapäiv omkiq Irboska nulga suurõp pühä.
 == Milles peetäs ==
 Mõlapäivä peetäs joq vaga Mõla Onufri aigõst. Taa om tänopühä, mink saamisjutus om höste tiidäq. Tuuvaihtõ, kuq kloostriülebäst oll' Onufri, trehväs' olõma sääne suvi, õt jaanipäävä paiku tull' maaha rassõ lumi, miä püssü pikält ja ähvärd' aastagadsõ vil'äsaagi arq tsurkiq. Pühä Onufri palvuisi pääle sulli lumi huul'maldaq külmist ilmost siskiq kipõstõ ja sügüse oll' saak' es'kiq näkküvält suurõb kuq minevil aastagil. Nii harisiq inemiseq kaq päält Onufri surma tulõma Mõla orgo kokko, õt tennädäq edevanõbit ja pallõldaq hüä saagi iist.
 === Vaga Mõla Onufri kotsilõ ===
-Vaga Mõla Onufri (sl k ''преподобный Онуфрий Мальский'') om Mõla Jumalaimä kloostri asotaja. Kats' Setomaa pühämiist - Mõla Onufri ja Irboska Serapion - oll'iq õkvakuq veleq. Nä ihatõlõdiq kuuh Mõla kloostri käekäügi iist ja oll'i mõlõbaq kaq taa kloostri iguumõniq. Kuqkiq Onufri asotõt kloostri häöt' 1581. aastagal uma sõaväegaq katoliiklasõst Poola kuningas Bátory Stefan, kakõhu-us õigõusolinõ elo Mõlah ja Irboskah kunagiq.<br />
+Vaga Mõla Onufri (sl k ''преподобный Онуфрий Мальский'') om Mõla Jumalaimä kloostri asotaja. Kats' Setomaa pühämiist - Mõla Onufri ja Irboska Serapion - oll'iq õkvakuq veleq. Nä ihatõlõdiq kuuh Mõla kloostri käekäügi iist ja oll'i mõlõbaq kaq taa kloostri iguumõniq. Kukkiq Onufri asotõt kloostri häöt' 1581. aastagal uma sõaväegaq katoliiklasõst Poola kuningas Bátory Stefan, kakõhu-us õigõusolinõ elo Mõlah ja Irboskah kunagiq.<br />
 Vaga mõla Onufri kuuli külq 1592. aastagal, aq timä nimme meelidsiq Mõla ja Irboska inemiseq viil aastasato niq kutsõq Mõla kloostrit õks Onufri kloostrist.<br />
 Pühämiis Onufrilõ om pühitset Mõla tsässon. Tuu om kest küllä nelä tii ristih suuri lõhmussidõ all. 
 == Kuis peetäs ==
@@ -21,12 +22,13 @@ Mõlapäävä müüdi Mõlah laadal vikahtit, tsirpõ ja rihho.<br />
 Päävä populaarsõst panõhtumisõlõ om üteh avitanuq Mõla kandi kotussidõ illos' luudus. Mõla ker'k om jõõ kaldõ pääl. Kerigu all om  pühä läteh ja kuq tuu viiga mõst, sis sütüseq arq kõik haigusõq.<br />
 Peräh ker'kot, nigu õks kombõst om, ilotõdi ja peeti kirmast. Vindläseq peiq säälsamah Mõla küläh, aq seto rahvas pidi umma praasnikut Pokolduvah, miä om paar' kilomiitrit kavvõbah.<br />
 Sagõhõhe om olnuq nii, õt mõlapäävä satas vihma. Om sääne ütelüs, õt kuq muialõ vihma saa-ai, sis Mõlla õks saa. Ja inämbält nii om kaq. Hot' pisokõnõ, aq tulõ.
-== Trüküstest ==
+== Trüküssist ==
 * "Seto kodu lugu", Greif, 1999
-* "Vaga Mõla Onufri mälestuspäev", raamaduh "Setomaa tsässonad", Greif, 2011, kokko säädnü Raudoja Ahto ja Mekäläineni Tapio
+* "Vaga Mõla Onufri mälestuspäev", raamaduh "Setomaa tsässonad", Greif, 2011, kokko säädnüq Raudoja Ahto ja Mekäläineni Tapio
 == Võrgost ==
 * [http://www.setoturism.ee/?lang=est&m1=33&m2=38&obj=21 Mõlapääväst "Setomaa Turismi" kodolehe pääl]
-* [http://vikerraadio.err.ee/uudisklipiarhiiv&pg=143 Taro Igori intõrvju Mõla kandist perit inemistegaq ja Setomaa tuuaodsõ ülebsoots'ka Raudoja Ahtogaq Vikerraadiolõ]
+* [http://vikerraadio.err.ee/uudisklipiarhiiv&pg=143 Taro Igori intõrvju Mõla kandist perit inemistegaq ja Setomaa tuuaodsõ ülebsoots'ka Raudoja Ahtogaq Vikerraadiolõ 18.07.2011]
 * [http://www.setomaa.ee/index.php?id=979d472a84804b9f647bc185a877a8b5 Hõrna Maarja kirotus "Nii kavva ku mäletä, olõmi õks Mõlapääväl käünü'" aoleheh "Setomaa" nr 7, 3. põimukuu 2006, lk 7]
 == Lätteq ==
 <references>
+[[katõgooria:Seto rahvakallendri]]
