*Empty MediaWiki Message*

--- a/Jakapäiv.mw
+++ b/Jakapäiv.mw
@@ -15,7 +15,7 @@ Umbõs kümme [[aastak]]ka oll'eq säändseq Ungavitsa külä kokkotulõgiq. Ku 
 * Ku jakapäivä pühitse-ei, sis pikseh lüü palama, tap tüütegija, räüss rik [[rügä|rüä]].
 * Jakapääväst pääle nakas suvõlõõnõh taganõma ja vesi [[järv]]eh jahtuma.
 * Jakapäävä tohi-iq kapstaaiah kävvüq, selle õt tuu mut'utas kapstapäie luumist.
-* Tuul aigo, ku [[inemine|inemiseq]] oll'eq kerigu man, käve jakab kapstih ja käänd' kapstapäid. ([[Rõugõ kihlkund]])
+* Tuul aigo, ku [[inemine|inemisõq]] oll'eq kerigu man, käve jakab kapstih ja käänd' kapstapäid. ([[Rõugõ kihlkund]])
 * Jakapääväst pääle kaosõq parmuq võso veerest.
 * Marju kor'ati [[talv]]õst inne jakapäivä.
 * Inne iljapäiävä satas salvõ, päält iljat salvõst vällä. (Setomaa)
