*Empty MediaWiki Message*

--- a/Mõlapäiv.mw
+++ b/Mõlapäiv.mw
@@ -1,8 +1,8 @@
-'''Mõlapäävä''' nimitüst tarvitõdas Mõla kandi paigapäälidse pühä kottalõ. Mõlapäiv om liikja pühä, midä peetäs edimätsel pühäpääväl peräh [[piitrepäiv]]ä ([[seto rahvakallendri|seto rahvakelendri]] piitrepäiv om vana kalendri [[12. hainakuu päiv|12. hainakuu pääväl]]).<br />
+'''Mõlapäävä''' nimitüst tarvitõdas [[Mõla]] kandi paigapäälidse pühä kottalõ. Mõlapäiv om liikja pühä, midä peetäs edimätsel pühäpääväl peräh [[piitrepäiv]]ä ([[seto rahvakallendri|seto rahvakelendri]] piitrepäiv om vana kalendri [[12. hainakuu päiv|12. hainakuu pääväl]]).<br />
 Mõlapäävä om Mõla küläh ülepetserimaalinõ praasnik - Mõla kerigu nimepäiv.
 == Koh peetäs ==
 Mõlapäivä peetäs Mõla ker'koh.<br />
-Mõla om külä [[Irboska nulk|Irboska nulgah]] [[Setomaa]]l. Taa külä om Mõla oroh, 24 km [[Petseri]]st lõunahummogu poolõ ja 4 km Irboskast põh'aõdagu poolõ. Mõla küläst hummogupoolõ om Mõla järv, minkast juusk vällä Optjoki jõgi.<br />
+Mõla om külä [[Irboska nulk|Irboska nulgah]] [[Setomaa]]l. Taa külä om [[Mõla org|Mõla oroh]], 24 km [[Petseri]]st lõunahummogu poolõ ja 4 km [[Irboska]]st põh'aõdagu poolõ. Mõla küläst hummogupoolõ om [[Mõla järv]], minkast juusk vällä [[Optjoki jõgi]].<br />
 Küläh oll' [[2000]]. aastagal elänikkõ 34  ja [[2011]]. aasatgal 40.<ref>Vinnekiilne vikipeediä Mõla kotsilõ [http://ru.wikipedia.org/wiki/%D0%9C%D0%B0%D0%BB%D1%8B]</ref><br />
 Mõlapäiv omkiq Irboska nulga suurõp pühä.
 == Milles peetäs ==
@@ -25,7 +25,7 @@ Sagõhõhe om olnuq nii, õt mõlapäävä satas [[vihm]]a. Om sääne ütelüs,
 * "Vaga Mõla Onufri mälestuspäev", raamaduh "Setomaa tsässonad", Greif, 2011, kokko säädnüq Raudoja Ahto ja Mekäläineni Tapio
 == Võrgost ==
 * [http://www.setoturism.ee/?lang=est&m1=33&m2=38&obj=21 Mõlapääväst "Setomaa Turismi" kodolehe pääl]
-* [http://vikerraadio.err.ee/uudisklipiarhiiv&pg=143 Taro Igori intõrvju Mõla kandist perit inemistegaq ja Setomaa tuuaodsõ ülebsoots'ka Raudoja Ahtogaq Vikerraadiolõ 18.07.2011]
+* [http://vikerraadio.err.ee/uudisklipiarhiiv&pg=143 Taro Igori intõrvju Mõla kandist perit inemiisigaq ja Setomaa tuuaodsõ ülebsoots'ka Raudoja Ahtogaq Vikerraadiolõ 18.07.2011]
 * [http://www.setomaa.ee/index.php?id=979d472a84804b9f647bc185a877a8b5 Hõrna Maarja kirotus "Nii kavva ku mäletä, olõmi õks Mõlapääväl käünü'" aoleheh "Setomaa" nr 7, 3. põimukuu 2006, lk 7]
 == Lätteq ==
 <references>
