*Empty MediaWiki Message*

--- a/Jakapäiv.mw
+++ b/Jakapäiv.mw
@@ -1,4 +1,4 @@
-[[Pilt:095.Elijah Ascends to Heaven in a Chariot of Fire.jpg|pisi|Eelijä-prohvõdi tulinõ taivahesõit]]
+[[Pilt:095.Elijah Ascends to Heaven in a Chariot of Fire.jpg|pisi|Prohvõt' Eelijä tulinõ taivahesõit]]
 '''Jakapäiv''' vai '''iljapäiv''' om vana kalendri [[2. põimukuu päiv|2. põimukuu (mädäkuu, lõikuskuu) pääväl]] ([[vahtsõnõ kallendri|vahtsõ kalendri]] perrä [[20. hainakuu päiv|20. hainakuu pääväl]]), kolq täüt [[nätäl|nädälit]] päält [[piitrepäiv]]ä ja viis üüdpäivä inne [[annõpäiv]]ä.<br />
 Taa om pühä prohvõt' Eelijä ([[slaavi|sl]] k ''Илия'', [[kreeka kiil|kr k]] ''Ἠλίας'') mälehtüspäiv. Peetäs pääas'aligult [[Setomaa]]l ja om aost aigu suur praasnik olnuq, mink juurõq küünüseq inneristiaolidsi kombidõ mano.<br />
 Es'kiq selgebält ku [[setoq|setodõl]], ommaq alalõ hoitunuq muistidsõ vakusõpraasnigu ja ohvõrdustal'tusõ kombõq [[vad'alasõq|vad'alaisil]].<ref>Vrd. Haavio, Heilige Haine, lk. 93 ja 127-136; Ariste, Vadja rahvakalender, lk. 99-109.</ref>
