/* Mõistatuisi vikahtkaari kotsilõ */

--- a/Vikahtkaar.mw
+++ b/Vikahtkaar.mw
@@ -6,7 +6,8 @@ Vikahtkaari värmiq lääväq ütsütes sujuvalt üle, näide vaihõl olõ-iq ki
 
 == Mõistatuisi vikahtkaari kotsilõ ==
 *''Tõõsõl maal pandas hobõst ette, luuk paistus siiäq maalõ?'' (Vikõrkaar. [[Rõugõ kihlkund]], 1937.)
-*''Võõral maal pandas hobõst ette, luuk näüs siiäq maalõ?'' (Vikakaar. [[Urvastõ kihlkund]], 1888.)<ref>Krikmanni Arvo, "[[Tere teele, tere meele, tere egalõ talolõ]]". Eesti Kirändüsmuusõum, Tarto 2000, lk. 131.</ref>
+*''Võõral maal pandas hobõst ette, luuk näüs siiäq maalõ?'' (Vikakaar. [[Urvastõ kihlkund]], 1888.)
+*''Viidipuu, vaadipuu, üle mõtsa mõõdipuu?'' (Vikerkaar. [[Setomaa]], 1888.)<ref>Krikmanni Arvo, "[[Tere teele, tere meele, tere egalõ talolõ]]". Eesti Kirändüsmuusõum, Tarto 2000, lk. 131, 138.</ref>
 
 == Lätteq == 
 <references>
