--- a/Päiv.mw
+++ b/Päiv.mw
@@ -2,6 +2,8 @@
 
 '''Päiv''' om [[täht]], miä om [[pääväsüstem]]i keskel ja and 98.6% timä massist. [[Maa (hod'otäht)|Maa]] ja muu mateeriä tiirotas timä ümbre.
 
+[[Pilt:Sunrise on beach in Valencia.jpg|200px|thumb|Päiv nõsõs]]
+
 [[Katõgooria:Pääväsüstem]]
 {{Link FA|ru}}
 
