--- a/Päiv.mw
+++ b/Päiv.mw
@@ -4,6 +4,15 @@
 
 [[Pilt:Sunrise on beach in Valencia.jpg|200px|thumb|Päiv nõsõs]]
 
+== Mõistatuisi päävä kotsilõ ==
+* ''Mõrs'a ehis mõtsa takan, peotäüs pirdõ käen?'' (Päiv. [[Urvastõ kihlkund]], 1890.)
+* ''Mõrs'a mäe takah, pirand pirda käeh?'' (Päävä nõsõminõ. [[Vahtsõliina kihlkund]], 1887.)<ref>Krikmanni Arvo, "[[Tere teele, tere meele, tere egalõ talolõ]]". Eesti Kirändüsmuusõum, Tarto 2000, lk. 140.</ref>
+
+== Lätteq ==
+<references>
+
+
+
 [[Katõgooria:Pääväsüstem]]
 {{Link FA|ru}}
 
