--- a/Päiv.mw
+++ b/Päiv.mw
@@ -7,7 +7,8 @@
 == Mõistatuisi päävä kotsilõ ==
 * ''Mõrs'a ehis mõtsa takan, peotäüs pirdõ käen?'' (Päiv. [[Urvastõ kihlkund]], 1890.)
 * ''Mõrs'a mäe takah, pirand pirda käeh?'' (Päävä nõsõminõ. [[Vahtsõliina kihlkund]], 1887.)
-* ''Kuldkerä kopli keskel?'' (Päiv. Urvastõ kihlkund, 1958.)<ref>Krikmanni Arvo, "[[Tere teele, tere meele, tere egalõ talolõ]]". Eesti Kirändüsmuusõum, Tarto 2000, lk. 140, 200.</ref>
+* ''Kuldkerä kopli keskel?'' (Päiv. Urvastõ kihlkund, 1958.)
+* ''Mõrs'a tulõ tarrõ, ei liiguta ust ei akant?'' (Päiv. [[Põlva kihlkund]], 1889.)<ref>Krikmanni Arvo, "[[Tere teele, tere meele, tere egalõ talolõ]]". Eesti Kirändüsmuusõum, Tarto 2000, lk. 140, 200, 245.</ref>
 
 == Lätteq ==
 <references>
