*Empty MediaWiki Message*

--- a/Päiv.mw
+++ b/Päiv.mw
@@ -9,7 +9,8 @@
 * ''Mõrs'a mäe takah, pirand pirda käeh?'' (Päävä nõsõminõ. [[Vahtsõliina kihlkund]], 1887.)
 * ''Kuldkerä kopli keskel?'' (Päiv. Urvastõ kihlkund, 1958.)
 * ''Mõrs'a tulõ tarrõ, ei liiguta ust ei akant?'' (Päiv. [[Põlva kihlkund]], 1889.)
-* ''Hamõ väläh, käüs tarõh?'' (Päiv. [[Setomaa]], 1928.)<ref>Krikmanni Arvo, "[[Tere teele, tere meele, tere egalõ talolõ]]". Eesti Kirändüsmuusõum, Tarto 2000, lk. 140, 200, 245, 259.</ref>
+* ''Hamõ väläh, käüs tarõh?'' (Päiv. [[Setomaa]], 1928.)
+* ''Üts kullanõ võti käänd kõik (ussõq) vallalõ?'' (Päiv paistus egast mulgust sisse. [[Räpinä kihlkund]], 1895.)<ref>Krikmanni Arvo, "[[Tere teele, tere meele, tere egalõ talolõ]]". Eesti Kirändüsmuusõum, Tarto 2000, lk. 140, 200, 245, 259.</ref>
 
 == Lätteq ==
 <references>
