*Empty MediaWiki Message*

--- a/Mõlapäiv.mw
+++ b/Mõlapäiv.mw
@@ -26,7 +26,7 @@ Sagõhõhe om olnuq nii, õt mõlapäävä satas [[vihm]]a. Om sääne ütelüs,
 * "Vaga Mõla Onufri mälestuspäev", raamaduh "Setomaa tsässonad", Greif, 2011, kokko säädnüq Raudoja Ahto ja Mekäläineni Tapio
 == Võrgost ==
 * [http://www.setoturism.ee/?lang=est&m1=33&m2=38&obj=21 Mõlapääväst "Setomaa Turismi" kodolehe pääl]
-* [http://vikerraadio.err.ee/uudisklipiarhiiv&pg=143 Taro Igori intõrvju Mõla kandist perit inemiisigaq ja Setomaa tuuaodsõ ülebsoots'ka Raudoja Ahtogaq Vikerraadiolõ 18.07.2011]
+* [http://vikerraadio.err.ee/uudisklipiarhiiv&pg=143 Taro Igori intõrvju Mõla kandist perit inemiisigaq ja tuuaodsõ Setomaa Ülebsoots'ka Raudoja Ahtogaq Vikerraadiolõ 18.07.2011]
 * [http://www.setomaa.ee/index.php?id=979d472a84804b9f647bc185a877a8b5 Hõrna Maarja kirotus "Nii kavva ku mäletä, olõmi õks Mõlapääväl käünü'" aoleheh "Setomaa" nr 7, 3. põimukuu 2006, lk 7]
 == Lätteq ==
 <references>
