--- a/Budism.mw
+++ b/Budism.mw
@@ -1,6 +1,64 @@
 [[Pilt:Wangdu and Puchung.jpg|thumb|[[Tiibet|Tiibedi]] buda mungaq]]
 
 '''Budism''' (ka ''buddhism'' vai ''buda usk'') om [[Buddha]] [[Šākjamuni]] (Siddhārtha Gautama; arvadaq 6.–5. aastagasada i.m.a.) oppus ni tuu perrä [[India]]n tegünüq ja säält muialõ levinüq traditsiuun, oppuisi kogo ja kultuur.
+<br />
+Ületsehe om Budismin kats suurõmbat tsihki: Theravaada ja Mahajaana. Mahajaana om populaarsõmb ja seol om rohkõmb vuulõ, näütüses Puhas Maa, Zen, Nichiren, Tiibeti Budism, Shingon, Tendai. Mahajaana alla loetas viil mynikõrd Vadžrajaana tsihki, aq palloq loevaq seod uma  tsihis. 
+<br />
+Budism om levinüq kaq muialõ maailman – arvadas, et maailman om 350 millonit kooniq 1,7 millardit budisti ja seo om üts kõgõ kipõmbini kasujit uskõ.
+<br />
+Kõgõ tähtsämb oppus Budismin om Kolmõ Kalliskivi oppus, mis om: Buddha, Dharma (Säädmüs) ja Sangha (kogokond). Kombõ perrä vannu budist hind Kolmõ Kalliskivi kaitsõ alla, kuq tä pühitsedäs mungas. Mungaq harotavaq viil õigõt eetilist üllenpidämist, mungakogokonna tugõmast, tähelepandmist ja meeleharotusi, pühäkirjotundmist, elämist välänpuul harilikku ütiskunda, usokombit ja muud.
+==Budismi oppus==
+===Ümbresündide ahhil===
+Tiidsäq elolidsõq (Budismin loetas tiidside elolidside sekkä joht pallalt inemidsi, ynnõ ka eläjit) hõlalõvaq ütsiotsõ tundaq hääd ja varriq halva (halu, kuulu, kurbust jne). Seo mõjo all on elolinõ ütsiotsõ kannatusõahilas (Sanskriti keelen Saṃsāra) ja seo määrä ärq tuu, määndsehe ello elolinõ sünnüs perän kuulu. Budistiq ususeq, et seo ahila saa murdaq, kuq oppiq ärq kaotama hõlalõmist ja hirmu Buddha ja Dharma (Säädmüs) oppuse perrä.
+===Karma===
+Budismin olõ-i Karma põhjusõ-tulo joud, niguq palloq arvavaq. Karma (Sanskriti keelen "tüü, tego") om tego, miä määrä egä inemise järgmädse jaku ümbresündide ahilas. Hääq, kasuliguq teoq ja halvaq teoq külbäväq miilde seemnit, midä tulõ lõigadaq seon vai mynõn järgmädsen elon.
+===Ümbresünd===
+Kuikiq budistiq usu-i igävädse elovaimo olõmasollu, om ümbresünd mitmõs tsihkis tähtsä. Budismin olõ-i egot vai henge, miä olõsiq lahotõt kygõkogost. Ümbresünd järgmidsihe ellõ om osa kogo ilma köütmisest ja püsümüsest.
+===Kannatusõ tekkümine ja seost priis saaminõ===
+====Neli õilsat tõtõ====
+Neljä õilsa tõtõ oppust piäs ütes keskses oppuses Budismin ja piäs budistligadsõ ilmakaehtusõ hundamendis. Neli õilsat tõtõ seledäväq ärq kannatusõ (ja rahulolõmatusõ), seo tekkümise ja kuis seost priis saiaq. Neli õilsat tõtõ om:
+# Kannatusõ tõtõ
+# Kannatusõ tekkümise tõtõ
+# Kannatusõ kistumisõ tõtõ
+# Kannatusõ kistumisõni viivä tii tõtõ
+Edimäne tõtõ seledä ärq kannatuse olõgi. Seo perrä om kannatusõl kolm umahust: füüsiline kannatus (vanas saaminõ, koolminõ, haigus), püsümätüse kannatus (lepmätüs asjo muutumisõga), elo häädümise ja lõpmadusõga lepmätüse kannatus. Tõnõ tõtõ lausu, et kannatus tekkü hõlalõmisõst, miä tulõ rumalusõst. Kolmas tõtõ lausu, et kannatusõst saa tävveste priis ja neläs lausu kuis seod saa.
+====Õilis katõssajaolinõ tii====
+Neläs õilis tõtõ omgi katõssajaolinõ tii ja seon om katõssa ütstõsõga köütet sammu, midä edendädes jovva kannatusõ kakkõmisõni. Neoq om:
+{| class="wikitable"
+|-
+! Alajaotus
+! Samm
+! Seletüs
+|-  style="background:#cff;"
+| rowspan="2" | Hamatsõminõ
+| 1. Õigõ kaehtus
+| Õigõ tõtõhus reaalsusõst, joht sääne, määndsenä seo paistu
+|-  style="background:#cff;"
+| 2. Õigõ kavatsus
+| Hõllahus priis saiaq, ilmlikkõ suuve salgaminõ
+|- style="background:#cfc;"
+| rowspan="3" | Üllenpidämine
+|3. Õigõ kõnõ
+| Tulõ kynõldaq pallalt tõtõt, ei tohiq kynnõgaq via tettäq
+|- style="background:#cfc;" 
+| 4. Õigõ tego
+|  Ei tohiq teogaq via tettäq
+|- style="background:#cfc;" 
+| 5. Õigõ eloviis
+|  Ei tohiq eloviisigaq via tettäq
+|- style="background:#fc9;"
+| rowspan="3" | Keskenduminõ
+|6. Õigõ püüdlüs
+|  Tulõ püüdäq õigõhe arõdaq
+|- style="background:#fc9;"
+| 7. Õigõ perrämõtlõminõ
+|  Tulõ tähele pandaq asjo õigõt olõkit; tulõ tähele pandaq hind nii, kuis perisihe oldas, ilma hõlalõmisita ja tähelepandmisõ kaihtumisõta
+|- style="background:#fc9;"
+| 8. Õigõ keskenduminõ
+| Õigõ meeleharotusõ (meditatsiooni) tarvitaminõ, õigõ keskenduminõ
+|}
+===Nirvana===
+Nirvana tähendä ümbresündide ahilast priis saamist. Õdagumaiõl tundas seod kuq virgumist. Oma meele Nirvanani veenüq elolinõ lätt kooldõs Parinirvanahe ja ei sünnü inämb ümbre. Myni Budismi tsihk ütle, et Nirvana aol või elolisõl ollaq viil kannatuisiga lepmisõ hätti ja et neoq kaovaq ynnõ Parinirvanan.
 
 [[Katõgooria:Budism]]
 
