*Empty MediaWiki Message*

--- a/Budism.mw
+++ b/Budism.mw
@@ -9,7 +9,7 @@ Budism om levinüq kaq muialõ maailman – arvadas, et maailman om 350 millonit
 Kõgõ tähtsämb oppus Budismin om Kolmõ Kalliskivi oppus, mis om: Buddha, Dharma (Säädmüs) ja Sangha (kogokond). Kombõ perrä vannu budist hind Kolmõ Kalliskivi kaitsõ alla, kuq tä pühitsedäs mungas. Mungaq harotavaq viil õigõt eetilist üllenpidämist, mungakogokonna tugõmast, tähelepandmist ja meeleharotusi, pühäkirjotundmist, elämist välänpuul harilikku ütiskunda, usokombit ja muud.
 ==Budismi oppus==
 ===Ümbresündide ahhil===
-Tiidsäq elolidsõq (Budismin loetas tiidside elolidside sekkä joht pallalt inemidsi, ynnõ ka eläjit) hõlalõvaq ütsiotsõ tundaq hääd ja varriq halva (halu, kuulu, kurbust jne). Seo mõjo all on elolinõ ütsiotsõ kannatusõahilas (Sanskriti keelen Saṃsāra) ja seo määrä ärq tuu, määndsehe ello elolinõ sünnüs perän kuulu. Budistiq ususeq, et seo ahila saa murdaq, kuq oppiq ärq kaotama hõlalõmist ja hirmu Buddha ja Dharma (Säädmüs) oppuse perrä.
+Tiidsäq elolidsõq (Budismin loetas tiidside elolidside sekkä joht pallalt inemidsi, ynnõ ka eläjit) hõlalõvaq ütsiotsõ tundaq hääd ja varriq halva (halu, kuulu, kurbust jne). Seo mõjo all om elolinõ ütsiotsõ kannatusõahilas (Sanskriti keelen Saṃsāra) ja seo määrä ärq tuu, määndsehe ello elolinõ sünnüs perän kuulu. Budistiq ususeq, et seo ahila saa murdaq, kuq oppiq ärq kaotama hõlalõmist ja hirmu Buddha ja Dharma (Säädmüs) oppuse perrä.
 ===Karma===
 Budismin olõ-i Karma põhjusõ-tulo joud, niguq palloq arvavaq. Karma (Sanskriti keelen "tüü, tego") om tego, miä määrä egä inemise järgmädse jaku ümbresündide ahilas. Hääq, kasuliguq teoq ja halvaq teoq külbäväq miilde seemnit, midä tulõ lõigadaq seon vai mynõn järgmädsen elon.
 ===Ümbresünd===
