--- a/Daugavpils.mw
+++ b/Daugavpils.mw
@@ -7,7 +7,7 @@
 |  pildiallkiri = Riia huulits Daugavpilsin
 |  lipu_pilt = [[Pilt:Bandera Daugavpils.png|150px|Daugavpilsi lipp]]
 |  lipu_link = [[Daugavpilsi lipp]]
-|  vapi_pilt = [[Pilt:Coat of arms of Daugavpils.png|100px|Daugavpilsi vapp]]
+|  vapi_pilt = [[Pilt:Coat of arms of Daugavpils.svg|100px|Daugavpilsi vapp]]
 |  vapi_link = [[Daugavpilsi vapp]]
 |  riik = Läti
 |  suurus = 72,48
