--- a/Jakapäiv.mw
+++ b/Jakapäiv.mw
@@ -76,4 +76,4 @@ Piirak tull' paksu koorõga ja suurõ leevä suurtunõ.
 * [http://et.wikipedia.org/wiki/Elias Prohvõt' Eeliäst tulõvaq nimeq eestikiilseh vikipeediäh]
 == Lätteq ==
 <references>
-[[katõgooria:Kallendri]]
+[[katõgooria:Seto rahvakallendri]]
