--- a/Mansiq.mw
+++ b/Mansiq.mw
@@ -1,25 +1,25 @@
-[[Pilt:IstSib008 1.jpg|pisi|Voguliq massvaq andamit [[Timofejevitši Jermak]]ilõ]]
-'''Mansiq''' (vanõb vinnepäränõ nimedus ''voguliq'', [[vinne keel]]en ''вогулы'') om [[soomõ-ugri rahvaq|soomõ-ugri rahvas]], kiä asussõ [[Hante-Manssemaa]]l  ja [[Jekaterinburgi oblast]]in  [[Vinnemaa]]l.
-Esi nimetäseq hinnäst maan´s´i, maan´s´i maahum, män´ s´. Naabriq, [[handiq]] ja [[sür`akomiq]] nimetäseq näid vogulites`, miä vinne keelega om levinü lakjambalt. Edimäst kõrda om mansõ tähendätü 1396 aastaga Vinne kroonigas vogulidõ nimõ all.
-Mansiq kuuluseq riiklikult tunnustet [[Vinnemaa väikõsõarvulisi põlisrahvuisi nimistü|Vinnemaa väikõsõarvulisi põlisrahvuisi]] hulka. Hantõ-Manssõ autonuumsõh ringkonnah om [[handi kiil|handi]] ja [[mansi kiil]] [[ametlik kiil|ametliguq keeleq]] [[vinne keel]]e kõrval. 
+[[Pilt:IstSib008 1.jpg|pisi|Voguliq masvaq andamit [[Timofejevitši Jermak]]ilõ]]
+'''Mansiq''' (vanõb vinneperänõ nimetüs ''voguliq'', [[vinne keel]]en ''вогулы'') om [[soomõ-ugri rahvaq|soomõ-ugri rahvas]], kiä eläseq [[Hante-Manssõmaa]]l  ja [[Jekaterinburgi oblast]]in  [[Vinnemaa]]l.
+Esiq nääq nimetäseq hinnäst maan´s´i, maan´s´i maahum, män´ s´. Naabriq, [[handiq]] ja [[süräkomiq]] nimetäseq näid voguliis', miä vinne keelega om levinüq laembalt. Edimäst kõrda om mansõ tähendet 1396 aastaga Vinne kroonikan vogulidõ nime all.
+Mansiq kuulusõq riiklikult tunnustõduisi [[Vinnemaa väikeisi põlisrahvidõ nimistü|Vinnemaa väikeisi põlisrahvidõ ]] hulka. Hantõ-Manssõ autonoomilidsen ringkunnan ommaq [[handi kiil|handi]] ja [[mansi kiil]] [[ametlik kiil|ammõtliguq keeleq]] [[vinne keel]]e kõrval. 
 
 == Mansi kiil ==
-[[Mansi kiil]] kuulus [[Soome-ugri keeleq|soome-ugri keeli]] [[ugri keeleq|ugri harro]].
+[[Mansi kiil]] kuulus [[Soomõ-ugri kiiliq|soome-ugri keeli]] [[ugri keeleq|ugri harro]].
 
 ==Aolugu==
-Edimält elliq mansiq [[Uural]]idõ õdagunõlvul, a 11.–14. aastagasaal ajjeq [[komiq]] ja [[vindlädseq]] nääq tõsele poole Uuralõid.
+Edimält elliq mansiq [[Uural]]idõ õdagunõlvul, a 11.–14. aastagasaal ajjõq [[komiq]] ja [[vindlädseq]] nääq tõsõlõ poolõ Uuraliid.
 
-Mansiq om olnuq Vinne võimu all 16. aastagasaast pääle, ku [[Timofejevitši Jermak]] tõie suurõbma osa [[Õdagu-Siber]]ist Vinne kontrolli alaq. Juba 17. aastagasaal ület` vindläste arv näidõ kodumaal manse hindä arvu. 18. aastagasaal mansiq ristiusustati, a tuu jäie pääas'aligult formaalsõs.
+Mansiq ommaq olnuq Vinne võimu all 16. aastagasaast pääle, ku [[Timofejevitši Jermak]] saiõ suurõ osa [[Õdagu-Tsiber]]ist Vinne kontrolli alaq. Juba 17. aastagasaal ület` vindläisi arv näide kodomaal mansõ hindä arvo. 18. aastagasaal mansiq ristiusestõdi, a tuu jäie pääas'aligult formaalsõs.
 
-Mansiq ommaq olnuq Vinne ja [[Nõvvkogliit|Nõvvkogu]] võimust tugõvambalt mõjutet ku näidõ põh`anaabriq [[handiq]], tuuperäst ommaq nääq viimadsist rohkõmb vindläisi sekkä assimileerunuq. 60% näist kasutas umavahel kõnõldõs [[vinne kiil]]t.
+Mansiq ommaq olnuq Vinne ja [[Nõvvokogoliit|Nõvvokogo]] võimust tugõvambalt mõõtõduq ku näide põh`anaabriq [[handiq]], tuuperäst ommaq nääq viimätsist rohkõmb vindläisi sekkä assimiliirünüq. 60% näist pruuk umavaihõl kõnõldõn [[vinne kiil]]t.
 
-Siskiq om näidõ arv järgemiisi kasunuq: ku 1926. aastaga rahvaloendusõ perrä oll' manse 5754, siis 1959. aastagal 6318 ja 1989. aastagal 8279 mansi. 2002. aastaga rahvaloendusõ tiidüsel elliq Vinnemaal 11 432 mansi, 2010. aastaga rahvaloendusõ tiidüsel 12 269 mansi.
+Siskiq om näide arv järgemiisi kasunuq: ku 1926. aastaga rahvaloendusõ perrä oll' mansõ 5754, siis 1959. aastagal 6318 ja 1989. aastagal 8279 mansi. 2002. aastaga rahvaloendusõ perrä elliq Vinnemaal 11 432 mansi, 2010. aastaga rahvaloendusõ perrä 12 269 mansi.
 
-[[Nahvta]]maardlade asotaminõ Hante-Mansemaal 1960ndil tõi üteh lajalidsõmba siserände lainõ Nõvvkogoliiduh perähn [[Tõnõ ilmasõda|Tõist ilmasõta]]. Tuuperäst jäie hantõ ja mansõ osatähtsüs väikeses ni nääq moodutasõq parhilla veidü inämb ku üte pro`tsendi ringkonna inemeisist. 
+[[Nahvta]]lövvükotussidõ käükivõtmnõ Hantõ-Mansõmaal 1960ndil tõi üteh lajalidsõmba siserändämise lainõ Nõvvkogoliidoh perähn [[Tõnõ ilmasõda|Tõist ilmasõta]]. Tuuperäst jäie hantõ ja mansõ osatähtsüs väikeses ni näid om parhilla veidü inämb ku üts protsent ringkunna inemeiisist. 
 
 ==Kirändüs==
-Nõvvkogoliit tugõsi mansi rahvusligu kirändüsõ üllitämist. 1931 luudi mansi kiräkiil [[ladina tähistü]], 1937 [[slaavi tähistü]] põh`al.
+Nõvvkogoliit tugõsi mansi rahvusligu kirändüsõ välläandmist. 1931 luudi mansi kiräkiil [[ladina tähistü]], 1937 [[slaavi tähistü]] põh'a pääle.
 
-Üts viimädse ao tundsambit mansi kir`änikke om [[Šestalovi Juvan]].
+Üts viimädse ao tundsambit mansi kiränikke om [[Šestalovi Juvan]].
 
 == Usk ==
