--- a/Mansiq.mw
+++ b/Mansiq.mw
@@ -9,7 +9,7 @@ Mansiq kuulusõq riiklikult tunnustõduisi [[Vinnemaa väikeisi põlisrahvidõ n
 ==Aolugu==
 Edimält elliq mansiq [[Uural]]idõ õdagunõlvul, a 11.–14. aastagasaal ajjõq [[komiq]] ja [[vindlädseq]] nääq tõsõlõ poolõ Uuraliid.
 
-Mansiq ommaq olnuq Vinne võimu all 16. aastagasaast pääle, ku [[Timofejevitši Jermak]] saiõ suurõ osa [[Õdagu-Tsiber]]ist Vinne kontrolli alaq. Juba 17. aastagasaal ület` vindläisi arv näide kodomaal mansõ hindä arvo. 18. aastagasaal mansiq ristiusestõdi, a tuu jäie pääas'aligult formaalsõs.
+Mansiq ommaq olnuq Vinne võimu all 16. aastagasaast pääle, ku [[Timofejevitši Jermak]] saiõ suurõ osa [[Õdagu-Tsiber]]ist Vinne kontrolli alaq. Juba 17. aastagasaal ület' vindläisi arv näide kodomaal mansõ hindä arvo. 18. aastagasaal mansiq ristiusestõdi, a tuu jäie pääas'aligult formaalsõs.
 
 Mansiq ommaq olnuq Vinne ja [[Nõvvokogoliit|Nõvvokogo]] võimust tugõvambalt mõõtõduq ku näide põh`anaabriq [[handiq]], tuuperäst ommaq nääq viimätsist rohkõmb vindläisi sekkä assimiliirünüq. 60% näist pruuk umavaihõl kõnõldõn [[vinne kiil]]t.
 
