--- a/Mansiq.mw
+++ b/Mansiq.mw
@@ -9,13 +9,13 @@ Mansiq kuulusõq riiklikult tunnustõduisi [[Vinnemaa väikeisi põlisrahvidõ n
 ==Aolugu==
 Edimält elliq mansiq [[Uural]]idõ õdagunõlvul, a 11.–14. aastagasaal ajjõq [[komiq]] ja [[vindlädseq]] nääq tõsõlõ poolõ Uuraliid.
 
-Mansiq ommaq olnuq Vinne võimu all 16. aastagasaast pääle, ku [[Timofejevitši Jermak]] saiõ suurõ osa [[Õdagu-Tsiber]]ist Vinne kontrolli alaq. Juba 17. aastagasaal ület' vindläisi arv näide kodomaal mansõ hindä arvo. 18. aastagasaal mansiq ristiusestõdi, a tuu jäie pääas'aligult formaalsõs.
+Mansiq ommaq olnuq Vinne võimu all 16. aastagasaast pääle, ku [[Timofejevitši Jermak]] saiõ suurõ osa [[Õdagu-Tsiber]]ist Vinne kontrolli alaq. Juba 17. aastagasaal ület' vindläisi arv näide kodomaal mansõ hindä arvo. 18. aastagasaal mansiq ristiusostõdi, a tuu jäie pääas'aligult formaalsõs.
 
-Mansiq ommaq olnuq Vinne ja [[Nõvvokogoliit|Nõvvokogo]] võimust tugõvambalt mõõtõduq ku näide põh`anaabriq [[handiq]], tuuperäst ommaq nääq viimätsist rohkõmb vindläisi sekkä assimiliirünüq. 60% näist pruuk umavaihõl kõnõldõn [[vinne kiil]]t.
+Mansiq ommaq olnuq Vinne ja [[Nõvvokogoliit|Nõvvokogo]] võimust tugõvambalt mõotõduq ku näide põh'anaabriq [[handiq]], tuuperäst ommaq nääq viimätsist rohkõmb vindläisi sekkä assimiliirünüq. 60% näist pruuk umavaihõl kõnõldõn [[vinne kiil]]t.
 
 Siskiq om näide arv järgemiisi kasunuq: ku 1926. aastaga rahvaloendusõ perrä oll' mansõ 5754, siis 1959. aastagal 6318 ja 1989. aastagal 8279 mansi. 2002. aastaga rahvaloendusõ perrä elliq Vinnemaal 11 432 mansi, 2010. aastaga rahvaloendusõ perrä 12 269 mansi.
 
-[[Nahvta]]lövvükotussidõ käükivõtmnõ Hantõ-Mansõmaal 1960ndil tõi üteh lajalidsõmba siserändämise lainõ Nõvvkogoliidoh perähn [[Tõnõ ilmasõda|Tõist ilmasõta]]. Tuuperäst jäie hantõ ja mansõ osatähtsüs väikeses ni näid om parhilla veidü inämb ku üts protsent ringkunna inemeiisist. 
+[[Nahvta]]lövvükotussidõ käükivõtmnõ Hantõ-Mansõmaal 1960ndil tõi üteh lajalidsõmba siserändämise lainõ Nõvvkogoliidoh perähn [[Tõnõ ilmasõda|Tõist ilmasõta]]. Tuuperäst jäie hantõ ja mansõ osatähtsüs väikeses ni näid om parhilla veidü inämb ku üts protsent ringkunna inemeiisist.
 
 ==Kirändüs==
 Nõvvkogoliit tugõsi mansi rahvusligu kirändüsõ välläandmist. 1931 luudi mansi kiräkiil [[ladina tähistü]], 1937 [[slaavi tähistü]] põh'a pääle.
