*Empty MediaWiki Message*

--- a/Wikipedia:Artiklivõistlusõst_osavõtjaq_artikliq_(2013).mw
+++ b/Wikipedia:Artiklivõistlusõst_osavõtjaq_artikliq_(2013).mw
@@ -14,6 +14,7 @@ Ku võtat võistlusõst ossa, sis olõq hää, panõq siiäq lehe pääle kirjä
 * [[Oksaneni Sofi]]. [[Pruukja:Mruut|Mruut]] ([[Pruukja arotus:Mruut|arotus]])
 * [[Mõlapäiv]]. (seto keeleh) [[Pruukja:Sügüsene|Sügüsene]] ([[Pruukja arotus:Sügüsene|arotus]])
 * [[Mansiq]]. [[Pruukja:Kerliplat|Kerliplat]] ([[Pruukja arotus:Kerliplat|arotus]])
+* [[Johannese Kuul Rosmal]]. (seto keeleh) [[Pruukja:Sügüsene|Sügüsene]] ([[Pruukja arotus:Sügüsene|arotus]])
 
 
 [[katõgooria:Vikipeediä]]
