*Empty MediaWiki Message*

--- a/Johannese_Kuul_Rosmal.mw
+++ b/Johannese_Kuul_Rosmal.mw
@@ -83,3 +83,5 @@ Valdorhvkuul om omanäolinõ tõist rööbildõst kasvatustiidelist mõtlõmist 
 * [http://www.partnerluskogu.ee/moodul.php?moodul=CMS&Komponent=NewsFront&f=viewNews&id=115]Kirotus kooli auruaho kotsilõ
 == Lätteq ==
 <references>
+
+[[Katõgooria:Põlva kihlkunna kooliq]]
