*Empty MediaWiki Message*

--- a/Johannese_Kuul_Rosmal.mw
+++ b/Johannese_Kuul_Rosmal.mw
@@ -1,3 +1,4 @@
+[[Pilt:Waldorfschule-Klassenraum.jpg|pisi|Valdorhvkooli klassiruum']]
 '''Johannese Kuul Rosmal''' om üledse haridusõ kuul, mink man tegotsõs kaq latsiaid. Taalõ valdorhvkooli alossäädüisi perra toimõndajalõ koolilõ <big>paniq alosõ latsivanõbaq</big> 1989. aastagal, kuq luudi Käisi Johhannese Kuul ja Latsiaid. 1990. aastaga sügüse tüüd alostanuq kuul kasvi 1999. aastagast põhikoolist. 2012/13 opiaastagal op' koolih <big>54 opilast 11 umaval'tsusõst</big> (Põlva-, Võro-, Valga- ja Tartomaalt) ni tüütäs <big>15 oppajat</big>. Koolih op'minõ om massulinõ. Kuuli pidä MTÜ Rosma Haridusselts', mink liikmist ommaq kaq latsõvanõbaq.<br />Rosma Haridusseldsi opikava om riikligult tunnustõt.<br />
 Kaq muial maailmah ommq valdorhvkooliq tekkünüq hariligult kodanigualgatusõ kõrrah ja tõimõndasõq kuq eräkooliq.
 == Koolimaja aolugu ==
