*Empty MediaWiki Message*

--- a/Johannese_Kuul_Rosmal.mw
+++ b/Johannese_Kuul_Rosmal.mw
@@ -72,8 +72,8 @@ Valdorhvkuul om omanäolinõ tõist rööbildõst kasvatustiidelist mõtlõmist 
 * Valdorhvpedagoogiga väärtüstäjä MTÜ Rosma Haridusselts' pälle 2012. aastagal "Tegüsä Eesti" sotsiaalsõ ettevõtlusõ abiraha.<ref>"Tegüsä Eesti" abiraha [http://www.olympic-online.com/kasiino/uudised/tegusa-eesti-3000-eurose-stipendiumi-palvis-rosma-haridusselts_n1504]</ref>
 
 == Trüküssist ==
-* "VABAD WALDORF-KOOLID (STEINER-KOOLID)", Tal'n, 1991, Kranichi Ernst-Michael
-* "Steinerpedaoogika vaimne aluspõhi", Kirästüs Valgusõsaar', Wilkinsoni Roy
+* "VABAD WALDORF-KOOLID (STEINER-KOOLID)", Kranichi Ernst-Michael,Talliin, 1991
+* "Steinerpedaoogika vaimne aluspõhi", Wilkinsoni Roy, Kirästüs Valgusõsaar',
  
 == Võrgost ==
 * [http://rosma.edu.ee/wp/]Kooli kodoleht'
