--- a/Mõlapäiv.mw
+++ b/Mõlapäiv.mw
@@ -3,21 +3,21 @@
 Mõlapäävä om Mõla küläh ülepetserimaalinõ praasnik - Mõla kerigu nimepäiv.
 == Koh peetäs ==
 Mõlapäivä peetäs Mõla ker'koh.<br />
-Mõla om külä [[Irboska nulk|Irboska nulgah]] [[Setomaa]]l. Taa külä om [[Mõla org|Mõla oroh]], 24 km [[Petseri]]st lõunahummogu poolõ ja 4 km [[Irboska]]st põh'aõdagu poolõ. Mõla küläst hummogupoolõ om [[Mõla järv]], minkast juusk vällä [[Optjoki jõgi]].<br />
+Mõla om külä [[Irboska nulk|Irboska nulgah]] [[Setomaa]]l. Taa külä om [[Mõla org|Mõla oro]] veere pääl, 24 km [[Petseri]]st lõunahummogu poolõ ja 4 km [[Irboska]]st põh'aõdagu poolõ. Mõla küläst hummogupoolõ om [[Mõla järv]], minkast juusk vällä [[Optjoki jõgi]].<br />
 Küläh oll' [[2000]]. aastagal elänikkõ 34  ja [[2011]]. aasatgal 40.<ref>Vinnekiilne vikipeediä Mõla kotsilõ [http://ru.wikipedia.org/wiki/%D0%9C%D0%B0%D0%BB%D1%8B]</ref><br />
 Mõlapäiv omkiq Irboska nulga suurõp pühä.
 == Milles peetäs ==
 Mõlapäivä peetäs joq vaga Mõla Onufri aigõst. Taa om tänopühä, mink saamisjutt om höste tiidäq. Tuuvaihtõ, kuq mastõraülebäst oll' Onufri, trehväs' olõma sääne suvi, õt [[jaanipäiv|jaanipäävä]] paiku tull' maaha rassõ [[lumi]], miä püssü pikält ja ähvärd' aastagadsõ vil'äsaagi arq tsurkiq. Pühä Onufri palvuisi pääle sulli lumi huul'maldaq külmist ilmost siskiq kipõstõ ja sügüse oll' saak' es'kiq näkküvält suurõb kuq minevil aastagil. Nii harisiq inemisõq kaq päält Onufri surma tulõma Mõla orgo kokko, õt tennädäq edevanõbit ja pallõldaq hüä saagi iist.
 === Vaga Mõla Onufri kotsilõ ===
 Vaga Mõla Onufri ([[slaavi|sl]] k ''преподобный Онуфрий Мальский'') om Mõla Jumalaimä mastõra asotaja. Kats' Setomaa pühämiist - Mõla Onufri ja Irboska Serapion - oll'iq õkvakuq veleq. Nä ihatõlõdiq kuuh Mõla mastõra käekäügi iist ja oll'i mõlõbaq kaq taa mastõra iguumõniq. Kukkiq Onufri asotõt mastõra häöt' [[1581]]. aastagal uma sõaväegaq katoliiklasõst [[Poola]] kuningas Bátory Stefan, kakõhu-us [[õigõusk|õigõusolinõ]] elo Mõlah ja Irboskah kunagiq.<br />
-Vaga mõla Onufri kuuli külq [[1592]]. aastagal, aq timä nimme meelidsiq Mõla ja Irboska inemiseq viil aastasato niq kutsõq Mõla mastrat õks Onufri mastrast.<br />
+Vaga mõla Onufri kuuli külq [[1592]]. aastagal, aq timä nimme meelidsiq Mõla ja Irboska inemiseq viil aastasato niq kutsõq Mõla mastõrat õks Onufri mastõrast.<br />
 Pühämiis Onufrilõ om pühitset Mõla tsässon. Tuu om kest küllä nelä tii ristih suuri lõhmussidõ all. 
 == Kuis peetäs ==
 Mõla ker'koh om peet ni eesti- kuq vinnekiil'sit teenistüisi, parhilladsõl aol ommaq kontroll'joonõ taadõ jäänüq seto kogohusõ tegemisõq vaibunuq. Tuugiperäst om mõlapäiv tähtsä kokkosaamisõ võimalus säält kandi rahvalõ.<br />
 Õga aastaga tahtvaq õks mõlapääväst kodopaika kaema tullaq kaq [[Petserimaa]]lt Eestimaalõ arq tulnuq inemisõq.<br />
 Ületsehe om mõlapäiv kombõkotsinõ kerigupühä jumalateenistüse ja ristikäügigaq. Vanõbaq inemisõq kõnõlasõq, õt Mõlah viidi kõõ ütte pühäsekeist ümbre kerigu ja tuu oll' sääne, miä tek' tervest, kuq haigõ oll'eq.<br />
 Kerigu man umatsidõ haudu pääl süvväs ja kõnõldas ummi tutvidõgaq. Taa kommõq tegegi seto pühäq esiqsugudsõst ja seto rahva üttehoitvast.<br />
-Mõlapäävä müüdi Mõlah laadal [[vikaht]]it, tsirpõ ja rihho.<br />
+Suurõp laat oll' mõlapäävä Petserih, aq suvõl hädäliisi asjugaq, [[vikaht]]iq, tsirbiq ja rihaq, kaubõldi tuupäiv kaq Mõlah.<br />
 Päävä populaarsõst panõhtumisõlõ om üteh avitanuq Mõla kandi kotussidõ illos' luudus. Mõla ker'k om jõõ kaldõ pääl. Kerigu all om  pühä [[läteq|läteh]] ja kuq tuu viiga mõst, sis sütüseq arq kõik haigusõq.<br />
 Peräh ker'kot, nigu õks kombõst oll', ilotõdi ja peeti kirmast. [[Vindläseq]] peiq säälsamah Mõla küläh, aq seto rahvas pidi umma praasnikut [[Pokolduva]]h, miä om paar' kilomiitrit kavvõbah.<br />
 Sagõhõhe om olnuq nii, õt mõlapäävä satas [[vihm]]a. Om sääne ütelüs, õt kuq muialõ vihma saa-ai, sis Mõlla õks saa. Ja inämbält nii om kaq. Hot' pisokõnõ, aq tulõ.
