*Empty MediaWiki Message*

--- a/Mõlapäiv.mw
+++ b/Mõlapäiv.mw
@@ -17,7 +17,7 @@ Mõla ker'koh om peet ni eesti- kuq vinnekiil'sit teenistüisi, parhilladsõl ao
 Õga aastaga tahtvaq õks mõlapääväst kodopaika kaema tullaq kaq [[Petserimaa]]lt Eestimaalõ arq tulnuq inemisõq.<br />
 Ületsehe om mõlapäiv kombõkotsinõ kerigupühä jumalateenistüse ja ristikäügigaq. Vanõbaq inemisõq kõnõlasõq, õt Mõlah viidi kõõ ütte pühäsekeist ümbre kerigu ja tuu oll' sääne, miä tek' tervest, kuq haigõ oll'eq.<br />
 Kerigu man umatsidõ haudu pääl süvväs ja kõnõldas ummi tutvidõgaq. Taa kommõq tegegi seto pühäq esiqsugudsõst ja seto rahva üttehoitvast.<br />
-Suurõp laat oll' mõlapäävä Petserih, aq suvõl hädäliisi asjugaq, [[vikaht]]iq, tsirbiq ja rihaq, kaubõldi tuupäiv kaq Mõlah.<br />
+Suurõp laat oll' mõlapäävä Petserih, aq suvõl hädäliisi asjugaq, niguq [[vikaht]]iq, tsirbiq ja rihaq, kaubõldi tuupäiv kaq Mõlah.<br />
 Päävä populaarsõst panõhtumisõlõ om üteh avitanuq Mõla kandi kotussidõ illos' luudus. Mõla ker'k om jõõ kaldõ pääl. Kerigu all om  pühä [[läteq|läteh]] ja kuq tuu viiga mõst, sis sütüseq arq kõik haigusõq.<br />
 Peräh ker'kot, nigu õks kombõst oll', ilotõdi ja peeti kirmast. [[Vindläseq]] peiq säälsamah Mõla küläh, aq seto rahvas pidi umma praasnikut [[Pokolduva]]h, miä om paar' kilomiitrit kavvõbah.<br />
 Sagõhõhe om olnuq nii, õt mõlapäävä satas [[vihm]]a. Om sääne ütelüs, õt kuq muialõ vihma saa-ai, sis Mõlla õks saa. Ja inämbält nii om kaq. Hot' pisokõnõ, aq tulõ.
