/* Osavõtjaq artikliq ja kirotajaq */

--- a/Wikipedia:Artiklivõistlusõst_osavõtjaq_artikliq_(2013).mw
+++ b/Wikipedia:Artiklivõistlusõst_osavõtjaq_artikliq_(2013).mw
@@ -15,6 +15,7 @@ Ku võtat võistlusõst ossa, sis olõq hää, panõq siiäq lehe pääle kirjä
 * [[Mõlapäiv]]. (seto keeleh) [[Pruukja:Sügüsene|Sügüsene]] ([[Pruukja arotus:Sügüsene|arotus]])
 * [[Mansiq]]. [[Pruukja:Kerliplat|Kerliplat]] ([[Pruukja arotus:Kerliplat|arotus]])
 * [[Johannese Kuul Rosmal]]. (seto keeleh) [[Pruukja:Sügüsene|Sügüsene]] ([[Pruukja arotus:Sügüsene|arotus]])
+* [[Katripäiv]]. [[Pruukja:Krõõt|Krõõt]] ([[Pruukja arotus:Krõõt|arotus]])
 
 
 [[katõgooria:Vikipeediä]]
